package proto;

option java_package = "com.lvl6.pictures.noneventprotos";
option java_outer_classname = "TriviaQuestionFormatProto";

message QuestionProto {
	//mutually exclusive, if one is set the other is not set
	optional MultipleChoiceQuestionProto multipleChoice = 1;
	optional PictureQuestionProto pictures = 2;
}

message MultipleChoiceQuestionProto {
	optional string id = 4;
	optional string question = 1;
	optional string answerId = 2;
	repeated MultipleChoiceAnswerProto answers = 3;
}

message MultipleChoiceAnswerProto {
	optional string id = 2;
	optional string answer = 3;
	optional AnswerType type = 1;
	
	enum AnswerType {
		TEXT = 1;
		PICTURE = 2;
	}
}

message PictureQuestionProto {
	optional string id = 4;
	
	//at the moment, either one image or 4 images
	repeated string imageNames = 1;
	
	//could be one word string or multiple worded string
	optional string answer = 2;
}